--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,24 +1,42 @@
+@font-face {
+    font-family: Neon;
+    src: url(fonts/NEON____.woff)format('truetype');
+}
+
+
+@font-face {
+    font-family: Rajdhani;
+    src: url(fonts/Rajdhani.ttf)format('truetype');
+}
 *{
-    font-family: sans-serif;
+    src: url();
     margin: 0;
     padding: 0;
 }
 
 body{
-    background: linear-gradient(rgb(27, 0, 67),rgb(99, 0, 104));
+    background: rgb(11, 11, 11);
     background-repeat: no-repeat;
     height: 100%;
     margin: 0;
     background-attachment: fixed;
-    color: rgb(27, 0, 67);  
 }
 
 header{
     text-align: center;
-    padding: 25px;
-    text-shadow: 3px -3px 10px rgb(255, 228, 152),3px 5px 10px rgb(255, 228, 152) ;
+    padding: 25px 0 40px;
+    text-shadow: 3px -3px 80px rgb(32, 210, 207);
+    -webkit-text-stroke:0.1px rgb(10, 251, 219);
+    color: rgba(0, 0, 0,0.5);
+    font-family: Neon,sans-serif;
+    font-size: 30px;
 }
 
+footer{
+    color: white;
+    border: solid azure;
+    padding: 5px;
+}
 nav>ul>li>a{
     text-decoration: none;
     text-align: center;
@@ -34,15 +52,48 @@ audio{
     padding-left: 40%;
     
 }
-.sub h4{
-    padding: 15px;
-    color: rgb(214, 214, 214);
-    font-weight: lighter;
-    background-color: rgb(26, 0, 52);
-    padding: 15px 10px 15px 3px;
-    margin: 10px 523px;
-    box-shadow: 1px 3px 6px rgb(40, 0, 40);
+
+/****************************/
+.main{
+    text-align: center;
+    padding: 30px 80px;
+    display: block;
 }
+.main p{
+    text-align: left;
+    font-weight: lighter;
+    padding: 15px;
+    /*background:linear-gradient(rgb(0, 123, 153),rgb(146, 0, 224) 80%);*/
+    margin: 40px auto;
+    border-radius: 0px;
+    color: aquamarine;
+    width: auto;
+    font-size: 18px;
+    border: solid aqua;
+}
+
+.main img{
+    margin: 0 auto;
+    width: auto;
+    height: 500px;
+    box-shadow: 1px 2px 20 blueviolet;
+}
+.main h2{
+    text-align: left;
+    padding: 5px;
+    color: #ffa0d9b3;
+    font-weight: lighter;
+    border: solid pink;
+    width: 220px;
+    font-family: Rajdhani, sans-serif;
+    font-weight: bold;
+}
+
+
+.sub{
+    padding: 0 80px 0 30px;
+}
+
 
 .dif{
     background: linear-gradient(rgb(57, 0, 28),rgb(0, 50, 74));
@@ -58,29 +109,8 @@ audio{
 .title2{
     color: rgb(97, 0, 37);
 }
-.main{
-    text-align: center;
-    padding: 30px;
-    display: block;
-}
-.main p{
-    font-weight: lighter;
-    padding: 15px;
-    /*background:linear-gradient(rgb(0, 123, 153),rgb(146, 0, 224) 80%);*/
-    background-color: rgb(23, 0, 46);
-    margin: 40px auto;
-    border-radius: 15px;
-    color: aquamarine;
-    width: 350px;
-    box-shadow: 3px 5px 20px aquamarine, 3px -7px 12px violet ;
-    
-}
-.main img{
-    margin: 0 auto;
-    width: auto;
-    height: 500px;
-    box-shadow: 3px 5px 20px violet, 3px -7px 12px aquamarine ;
-}
+
+
 .main2 p{
     font-weight: lighter;
     padding: 15px;
